Fixed Alignment Issue with header

--- a/public/css/_body.scss
+++ b/public/css/_body.scss
@@ -21,6 +21,7 @@ h3, p, .button {
 }
 .Subheading {
   font-size: 3em;
+  text-align: center;
 }
 
 .hero-img {
